Updated the Helpers Tooltip function. Radzen removed the option to use html in the plain text sent to their tooltips component, so any messages with html are now convereted to a RenderFragment first and passed that way. Fixed an accessibility issue on the deleted items page with the Id element being too small. Fixed the badge-count css to increase the font size for accessibility and changed the color to be more inline with standard count colors using red.

--- a/CRM.Client/wwwroot/css/site.css
+++ b/CRM.Client/wwwroot/css/site.css
@@ -1088,6 +1088,10 @@ h2.quick-action {
     text-align:right;
 }
 
+.deleted-record .deleted-info .note {
+    font-size:1em;
+}
+
 .tooltip-item {
     cursor: pointer;
 }
@@ -1374,7 +1378,9 @@ label.unbold {
 .badge-count {
     position:relative;
     top:-8px;
-    font-size:0.6em;
+    left:1px;
+    font-size:0.7em;
+    padding:.15em .5em;
 }
 
 fieldset legend {
